--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,13 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <!-- font Awesome css -->
+    <link
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
 
-    <title>otopark Admin</title>
+    <title>OICCS Admin</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
